--- a/source/pages/home.html
+++ b/source/pages/home.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <h1>NodeJS Express Demo App</h1>
-        <p>This app was made during a ITOT Africa Dev training and Knowdlege transfer session</p>
+        <p>This app was made during a ITOT Africa Dev training and Knowledge transfer session</p>
         <h4 style="padding-top: 20px;">Check out the other rout of the app:</h4>
         <ul>
             <li>/home</li>
